# valuation-strategy

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  run.py
engine/: finance.py  model.py  scenarios.py  strategy.py
static/css/: main.css
static/js/: main.js
templates/: index.html  layout.html  results.html
